<resources>
    <string name="app_name">SavePlate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to SavePlate</string>
    <string name="photo">Illustration</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="scan">Scan here</string>
    <string name="insights">Food Insights</string>
    <string name="confirmPass">Konfirmasi Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="insight">Insight</string>
    <string name="article">article</string>
    <string name="rotten">Sorry, your food is not suitable for consumption.\nLet\'s find a way to process it by clicking the Process button.</string>
    <string name="condition">Condition: Rotten/Fresh</string>
    <string name="check">check another</string>
    <string name="recycle">Recycle</string>
    <string-array name="data_title">
        <item>Tips Menyimpan Sayuran di Kulkas</item>
        <item>Tips Menyimpan Makanan</item>
        <item>Jangan simpan sayuran ini di kulkas</item>
        <item>Ciri-ciri makanan sudah basi</item>
        <item>Tips mengetahui telur basi</item>
        <item>Food waste di Indonesia</item>
    </string-array>
    <string-array name="data_title2">
        <item>7 Langkah Gampang Menyulap Sampah Makanan Jadi Pupuk Kompos</item>
        <item>Mengubah Sampah Makanan Menjadi Ekoenzim</item>
        <item>Jangan Dibuang, Begini Cara Mengolah Sisa Makanan Jadi Kompos Tanpa Bau dan Bersih</item>
        <item>Membuat Pupuk Organik Cair Dari Buah Buahan Busuk</item>
        <item>Cara Membuat Pupuk Organik dari Kulit Pisang</item>
        <item>Cara Membuat Mol Dari Buah Pepaya Busuk</item>
        <item>Sampah dan Buah Busuk Disulap Jadi Bioetanol</item>
    </string-array>
    <string-array name="data_source">
        <item>detik.com</item>
        <item>sayurbox.com</item>
        <item>detik.com</item>
        <item>royalsnackbox.com</item>
        <item>royalsnackbox.com</item>
        <item>ketahananpangan.probolinggokab.go.id</item>
    </string-array>
    <string-array name="data_source2">
        <item>dbs.com</item>
        <item>kompas.com</item>
        <item>momsmoney.id</item>
        <item>cybex.pertanian.go.id</item>
        <item>sibakuljogja.jogjaprov.go.id</item>
        <item>cybex.pertanian.go.id</item>
        <item>okezone.com</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/img_1</item>
        <item>@drawable/img_2</item>
        <item>@drawable/img_3</item>
        <item>@drawable/img_4</item>
        <item>@drawable/img_5</item>
        <item>@drawable/img_6</item>
    </string-array>
    <string-array name="data_photo2">
        <item>@drawable/img_7</item>
        <item>@drawable/img_8</item>
        <item>@drawable/img_9</item>
        <item>@drawable/img_10</item>
        <item>@drawable/img_11</item>
        <item>@drawable/img_12</item>
        <item>@drawable/img_13</item>
    </string-array>
    <string-array name="data_article">
        <item>Sayuran merupakan salah satu bahan makanan yang wajib tersedia di rumah. Biasanya orang–orang membeli dalam jumlah yang banyak lalu disimpan di kulkas.\n\nSayangnya, sayuran memiliki kadar air yang cukup tinggi sehingga tidak bisa disimpan di kulkas terlalu lama. Ada beberapa hal yang perlu diperhatikan saat akan menyimpan sayuran di kulkas agar awet. Berikut cara menyimpan sayuran di kulkas supaya awet.\n\n1. Pisahkan Sayur dan Buah yang Akan Disimpan\nSayuran buah tidak dapat disimpan secara bersamaan di kulkas. Buah menghasilkan zat etilen yang membuat bahan makan lain menjadi cepat matang. Oleh karena itu, penyimpanan sayur dan buah perlu dipisahkan. Caranya dapat dengan membedakan wadah yang dipakai atau disimpan di rak kulkas yang berbeda.\n\n2. Pilah Sayuran\nSayuran yang akan disimpan di dalam kulkas perlu dipilah terlebih dahulu. Jika ada sayuran yang \'cacat\' atau sebagian yang sudah layu harus dibuang sehingga kerusakannya tidak menyebar ke bagian lain. Lalu untuk sayuran yang berakar dapat dipotong terlebih dahulu bagian akarnya agar menghindari bakteri yang dapat merusak kesegaran sayur.\n\n3. Cuci dan Keringkan Sayuran\nSebelum dimasukkan ke kulkas, sayuran yang sudah dibeli lantas dicuci dengan air sampai bersih. Hal ini bertujuan untuk membasmi bakteri yang menempel pada sayuran. Bakteri yang ada pada sayuran dapat membuat sayuran cepat busuk.Setelah dicuci hingga bersih, keringkan sayuran. Mengeringkan sayuran dapat dengan meniriskan sisa–sisa air yang ada di sayuran. Jangan sampai mengeringkan sayuran dengan lap ya.\n\n4. Jangan Potong Sayuran\nSayuran yang akan disimpan di kulkas alangkah lebih baik disimpan dalam keadaan utuh. Proses pemotongan sayuran ini akan memperbesar potensi membusuknya sayuran.\n\n5. Perhatikan Sirkulasi Udara\nSayuran memiliki kadar air yang tinggi. Air yang ada pada sayuran dapat memberikan kelembaban dan menjadikan sayuran lebih awet. Oleh karena itu, pastikan sayuran yang disimpan di kulkas memiliki sirkulasi udara yang baik. Caranya, sayuran dapat dibungkus dengan wadah plastik yang dilubangi, atau jaring buah maupun kertas tisu. Kertas tisu dapat membantu menyerap suhu kulkas sehingga membuat sayuran menjadi lebih awet.6. Gunakan Wadah Sesuai Jenis Sayuran\nUntuk beberapa jenis sayuran yang memiliki batang yang keras khususnya, dapat disimpan di dalam wadah tertutup. Seperti wortel, brokoli, dan jagung dapat disimpan di wadah. Namun, untuk sayuran hijau dapat menggunakan wadah tanpa tutup agar sirkulasi udara lebih baik. Selain agar lebih awet, penggunaan wadah ini akan menjadikan kulkas lebih bersih dan rapi.\n\n7. Perhatikan Ketahanan Sayuran\nBeberapa sayuran dapat bertahan lama di dalam kulkas, namun ada juga sayuran yang tidak begitu tahan lama. Agar tidak terbuang sia-sia, perlu diketahui masa penyimpanan dari setiap jenis sayuran. Contohnya untuk sayuran berdaun hijau hanya bertahan 3 - 5 hari saja. Sedangkan untuk sayuran hijau tanpa daun dapat bertahan hingga 7 hari. Lebih lama lagi, sayuran umbi-umbian dan yang berbatang dapat tahan hingga 3 minggu.\n\n8. Periksa Kebersihan Kulkas\nKebersihan kulkas juga penting untuk mendukung ketahanan sayuran yang ada di dalam kulkas. Kulkas yang kotor akan menghasilkan sirkulasi udara yang tidak baik. Selain itu, kulkas kotor juga dapat membuat bakteri dan kotoran menempel di sayuran dan membuat sayuran cepat busuk.\n\n9. Jaga Suhu Kulkas\nSuhu kulkas pada umumnya berada di angka 1 - 4 derajat Celcius. Jika suhu lebih tinggi dari itu, maka bakteri berpotensi untuk berkembang lebih cepat. Jadi suhu kulkas perlu dijaga agar sayuran awet.\n\nItulah 9 cara menyimpan sayuran di kulkas agar awet. Semoga dapat membantu.\n\n</item>
        <item>1. Memanaskan Makanan Sebelum Disimpan\n
        2. Jangan Mencuci Buah Sebelum Dimasukan Ke Kulkas\n
        3. Jangan Tutup Makanan Saat Masih Panas\n
        4. Jangan Menyimpan Makanan Diluar Ruangan Terlalu Lama\n
        5. Simpanlah Makanan Didalam Wadah Tertutup\n
        6. Membersihkan Kulkas Secara Berkala</item>
        <item>Tidak semua sayuran cocok untuk disimpan di kulkas. Misalnya tomat, kentang, dan daun kemangi. Tomat tidak bisa disimpan di kulkas karena dapat menghambat proses pematangan. Sedangkan kentang lebih baik disimpan di tempat yang gelap agar kandungan tepungnya terjaga. Lalu daun kemangi juga tidak cocok untuk disimpan di dalam kulkas karena udara dingin dapat membuat daun kemangi menjadi cepat layu.</item>
        <item>1. Muncul bau tidak sedap dari makanan\n
        2. Adanya jamur di makanan\n
        3. Adanya lendir dalam makanan\n
        4. Rasa makanan menjadi kecut dan asam\n
        5. Warna makanan berubah\n</item>
        <item>Kamu bisa mengetahui apakah telur itu masih bagus atau tidak dari sedikit percobaan. Pertama masukkan telur ke dalam air kemudian lihatlah apakah mengambang atau tenggelam. Telur yang masih segar sebagian maka akan berposisi tidur di bagian bawah air.</item>
        <item>Indonesia adalah Negara kedua terbesar setelah Arab dalam hal food loss dan food waste di dunia. Indonesia diperkirakan menghasilkan 13 juta ton sampah makanan setiap tahunnya. Timbunan food loss dan food waste Indonesia pada 2000–2019 yaitu 23-48 juta ton/tahun setara dengan 115- 184 kg/kapita/tahun. Studi menemukan lebih dari 30% sampah di Indonesia berasal dari makanan. Kehilangan ini menghasilkan kerugian sebesar Rp 213-551 trilyun/tahun atau setara dengan 4-5% PDB Indonesia pertahun.</item>
    </string-array>
    <string name="title_activity_donate_loc">DonateLocActivity</string>
    <string name="donate">Donate</string>
    <string name="donateloc">"Donation Discover "</string>
    <string name="home">Home</string>
    <string name="scanPhoto">Food Scan</string>
    <string name="log_in">Log in</string>
</resources>